[gd_scene load_steps=21 format=3 uid="uid://ctd8xi6wdx1h"]

[ext_resource type="Script" path="res://main.gd" id="1_ntcjf"]
[ext_resource type="PackedScene" uid="uid://dseb7xqjms3u6" path="res://ui/level_select/level_select.tscn" id="2_p70cs"]
[ext_resource type="Texture2D" uid="uid://gr22k5ibboj7" path="res://assets/level_stuff/WinAnim.png" id="3_o22mr"]
[ext_resource type="PackedScene" uid="uid://b18s0kfnnp2ch" path="res://ui/transition/transitioner.tscn" id="4_nb2yq"]
[ext_resource type="Script" path="res://ui/pause_menu.gd" id="5_6dq5v"]
[ext_resource type="Texture2D" uid="uid://d12eu17xjnlxf" path="res://assets/level_stuff/RewindBarEmpty.png" id="6_mr47i"]
[ext_resource type="Texture2D" uid="uid://cmkwnxyfnp7xa" path="res://assets/level_stuff/RewindBarFull.png" id="7_8wg3w"]
[ext_resource type="PackedScene" uid="uid://c6r5hdnc2e5n5" path="res://ui/settings_menu/settings_menu.tscn" id="8_or1rc"]
[ext_resource type="Texture2D" uid="uid://c4imii5p5sbph" path="res://assets/particles/sparkle.png" id="8_r1bar"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f4cos"]
atlas = ExtResource("3_o22mr")
region = Rect2(0, 0, 160, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6yyf"]
atlas = ExtResource("3_o22mr")
region = Rect2(0, 64, 160, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dobg3"]
atlas = ExtResource("3_o22mr")
region = Rect2(0, 128, 160, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qeb7"]
atlas = ExtResource("3_o22mr")
region = Rect2(0, 192, 160, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qewfp"]
atlas = ExtResource("3_o22mr")
region = Rect2(0, 256, 160, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vs8j1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4cos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6yyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dobg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qeb7")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_qewfp")
}],
"loop": false,
"name": &"WinAnim",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_ds136"]
offsets = PackedFloat32Array(0, 0.190476, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 0.978, 0.56, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ilkbd"]
gradient = SubResource("Gradient_ds136")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nr8cl"]
emission_shape = 3
emission_box_extents = Vector3(0, 4.5, 0)
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 4.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_ilkbd")

[sub_resource type="Animation" id="Animation_e7qc6"]
resource_name = "unlock_rewind"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RewindBar:value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 2.6),
"transitions": PackedFloat32Array(2.07054, 1),
"update": 0,
"values": [0.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RewindBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 3, 3.8),
"transitions": PackedFloat32Array(0.287175, 1, 1, 1, 2.92817),
"update": 0,
"values": [Vector2(704, 1200), Vector2(704, 220), Vector2(704, 256), Vector2(704, 256), Vector2(1664, 896)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RewindBar:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 3.8),
"transitions": PackedFloat32Array(1, 0.189464),
"update": 0,
"values": [Vector2(32, 32), Vector2(8, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RewindBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:do_input")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RewindBar/ParticleParent/GPUParticles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8, 2.6),
"transitions": PackedFloat32Array(1, 0.933033, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RewindBar/ParticleParent:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.6, 2.6),
"transitions": PackedFloat32Array(2.08, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqw8y"]
_data = {
"unlock_rewind": SubResource("Animation_e7qc6")
}

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ntcjf")
do_input = true

[node name="LevelSelect" parent="." instance=ExtResource("2_p70cs")]

[node name="WinAnim" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(960, 576)
scale = Vector2(12, 12)
sprite_frames = SubResource("SpriteFrames_vs8j1")
animation = &"WinAnim"

[node name="Transitioner" parent="." instance=ExtResource("4_nb2yq")]

[node name="PauseMenu" type="Control" parent="."]
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_6dq5v")

[node name="Polygon2D" type="Polygon2D" parent="PauseMenu"]
color = Color(0.203922, 0.203922, 0.203922, 1)
polygon = PackedVector2Array(448, 128, 448, 960, 1472, 960, 1472, 128)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 512.0
offset_top = 192.0
offset_right = 1408.0
offset_bottom = 1024.0

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="ReturnToMap" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Return to Map"

[node name="ReturnToTitle" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Return to Title"

[node name="Settings" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="RewindBar" type="TextureProgressBar" parent="."]
z_index = 3
offset_left = 1664.0
offset_top = 896.0
offset_right = 1690.0
offset_bottom = 922.0
scale = Vector2(8, 8)
max_value = 3.0
step = 0.1
value = 3.0
fill_mode = 4
texture_under = ExtResource("6_mr47i")
texture_progress = ExtResource("7_8wg3w")

[node name="ParticleParent" type="Node2D" parent="RewindBar"]
position = Vector2(8, 8)
rotation = 6.28319

[node name="GPUParticles2D" type="GPUParticles2D" parent="RewindBar/ParticleParent"]
position = Vector2(0, -4)
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_nr8cl")
texture = ExtResource("8_r1bar")
lifetime = 0.4

[node name="SettingsMenu" parent="." instance=ExtResource("8_or1rc")]
visible = false
z_index = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dqw8y")
}

[connection signal="button_up" from="PauseMenu/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_button_up"]
[connection signal="button_up" from="PauseMenu/VBoxContainer/ReturnToMap" to="PauseMenu" method="_on_return_to_map_button_up"]
[connection signal="button_up" from="PauseMenu/VBoxContainer/ReturnToTitle" to="PauseMenu" method="_on_return_to_title_button_up"]
[connection signal="button_up" from="PauseMenu/VBoxContainer/Settings" to="PauseMenu" method="_on_settings_button_up"]
